DBZ-6232 Manage BYTEA_ARRAY in PostgresValueConverter